# pym165

./: .ruff.toml  LICENSE.md  README.md  classes.tcss  config.py  ids.tcss  main.py  pyproject.toml  tui.py  tui.tcss
screens/: create_screen.py  delete_screen.py  main_screen.py  read_screen.py  update_screen.py
shared/: data.py  db.py  strings.py  textual_shared.py
stylesheets/: classes.tcss  ids.tcss
