[project]
name = "pym165"
version = "0.9.0"
description = "python TUI mongodb program made for module 165 with specific requirements"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pymongo>=4.15.3",
    "textual>=6.4.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
